<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="20dp">





    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:textColor="#565656"
            android:textStyle="bold"
            android:hint="@string/enter_text_here"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </com.google.android.material.textfield.TextInputLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"
        android:gravity="end"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:background="@null"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:textColor="#565656"/>



        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/btn_bg"
            android:text="@string/ok"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>



</LinearLayout>