<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCF8C6"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_vertical"
            android:background="#075E54"
            android:gravity="center"
            android:theme="@style/ToolbarStyle">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.templatevilla.colorbookspaint.view.CustomTextView
                    android:id="@+id/text_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_toStartOf="@+id/btn_offline"
                    android:fontFamily="@font/chewy"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/select_image"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:outerShadowRadius="1dp"
                    app:strokeColor="#075E54"
                    app:strokeJoinStyle="miter"
                    app:strokeWidth="0.8dp" />


                <ImageView
                    android:id="@+id/btn_offline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/switch_on" />


            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_ads_view"
            android:layout_below="@+id/toolbar">

            <TextView
                android:id="@+id/txt_no_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no_data"
                android:visibility="visible" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_ads_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal">

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_banner_id"></com.google.android.gms.ads.AdView>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>